# naviz

./: .gitignore  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  UPGRADING.md  noxfile.py  pyproject.toml  rust-toolchain.toml
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  contributing.md  pull_request_template.md  release-drafter.yml  release.yaml  renovate.json5  support.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflows/: cd.yml  ci.yml  code-ql-python.yml  desktop-build.yaml  docker-build.yaml  format.yaml  github-pages.yaml  lint-python.yml  lint-rust.yaml  lint.yaml  publish-crates.yaml  publish_crates.yaml  python.yaml  reusable-change-detection.yml  reusable-rust-ci.yml  reusable-rust-coverage.yml  reusable-rust-linter.yml  reusable-rust-tests-macos.yml  reusable-rust-tests-ubuntu.yml  reusable-rust-tests-windows.yml  templating.yml  test.yaml
animator/: Cargo.toml
animator/src/: animator.rs  color.rs  interpolator.rs  lib.rs  position.rs  timeline.rs  to_float.rs
bindings/: Cargo.toml
bindings/src/: lib.rs
configs/machines/: example.namachine
configs/styles/: catpuccin_frappe.nastyle  catpuccin_latte.nastyle  catpuccin_macchiato.nastyle  catpuccin_mocha.nastyle  tum.nastyle  tum_dark.nastyle
doc/: FileFormat.md
docs/: ai_usage.md  conf.py  contributing.md  development_guide.md  file_format.md  index.md  installation.md  support.md  usage.md
gui/: Cargo.toml  README.md  Trunk.toml  index.html
gui/assets/: manifest.json  sw.js
gui/src/: animator_adapter.rs  app.rs  aspect_panel.rs  canvas.rs  current_machine.rs  drawable.rs  error.rs  errors.rs  export_dialog.rs  future_helper.rs  import.rs  init.rs  lib.rs  main.rs  menu.rs  progress_bar.rs  util.rs  zoom.rs
import/: Cargo.toml
import/rsc/test/: example.na
import/src/: lib.rs  mqt.rs  separated_display.rs
import/src/mqt/: na.rs
import/src/mqt/na/: convert.rs  format.rs
parser/: Cargo.toml
parser/rsc/test/: example.namachine  example.nastyle  example.naviz
parser/src/: common.rs  config.rs  input.rs  lib.rs  test_utils.rs
parser/src/common/: color.rs  lexer.rs  parser.rs  percentage.rs
parser/src/common/parser/: try_into_value.rs
parser/src/config/: color.rs  error.rs  generic.rs  lexer.rs  machine.rs  parser.rs  percentage.rs  position.rs  visual.rs
parser/src/config/parser/: try_into_value.rs
parser/src/input/: concrete.rs  lexer.rs  parser.rs
python/: Cargo.toml  LICENSE  README.md  pyproject.toml
python/mqt/naviz/: __init__.py
python/src/: lib.rs
renderer/: Cargo.toml  build.rs
renderer/src/: buffer_updater.rs  component.rs  globals.rs  globals.wgsl  layout.rs  lib.rs  renderer.rs  shaders.rs  util.wgsl  viewport.rs  viewport.wgsl
renderer/src/component/: atoms.rs  drawable.rs  legend.rs  machine.rs  primitive.rs  time.rs  updatable.rs
renderer/src/component/primitive/: circles.rs  circles.wgsl  lines.rs  lines.wgsl  rectangles.rs  text.rs
repository/: Cargo.toml
repository/src/: error.rs  lib.rs
state/: Cargo.toml
state/src/: config.rs  lib.rs  state.rs
video/: Cargo.toml
video/src/: lib.rs
