# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[workspace]
members = [
  "parser",
  "gui",
  "renderer",
  "state",
  "animator",
  "video",
  "repository",
  "import",
  "bindings",
]
resolver = "2"

[workspace.package]
repository = "https://github.com/cda-tum/mqt-naviz"
edition = "2021"
