[build-system]
requires = [
    "maturin>=1.8,<2.0",
    "setuptools-scm>=8.3.1",
]
build-backend = "maturin"


[project]
name = "mqt-naviz"
description = "A Visualizer for Neutral Atom Quantum Computers"
readme = "README.md"
authors = [
    { name = "Nico Petzendorfer", email = "nico.petzendorfer@tum.de" },
    { name = "Yannick Stade", email = "yannick.stade@tum.de" },
    { name = "Daniel Haag", email = "daniel.haag@tum.de" },
]
keywords = ["MQT", "quantum-computing", "design-automation", "compiler", "visualization", "neutral-atoms"]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/cda-tum/mqt-naviz"
Documentation = "https://mqt.readthedocs.io/projects/naviz"
Issues = "https://github.com/cda-tum/mqt-naviz/issues"
Discussions = "https://github.com/cda-tum/mqt-naviz/discussions"


[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "python/Cargo.toml"
python-source = "python"
python-packages = ["mqt/naviz"]
module-name = "mqt.naviz.naviz"


[tool.uv]
required-version = ">=0.5.20"
reinstall-package = ["mqt-naviz"]

[tool.uv.sources]
mqt-naviz = { workspace = true }


[dependency-groups]
build = [
    "maturin>=1.8,<2.0",
    "setuptools-scm>=8.3.1",
]
docs = [
    "ipywidgets>=8.1.7",
    "furo>=2024.8.6",
    "setuptools-scm>=8.3.1",
    "sphinx-autoapi>=3.6.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-svg2pdfconverter>=1.3.0",
    "sphinxext-opengraph>=0.10.0",
    "myst-nb>=1.2.0",
    "sphinx>=7.4.7",
    "sphinx>=8.1.3; python_version >= '3.10'",
    "sphinx>=8.2.3; python_version >= '3.11'",
    "sphinxcontrib-rust>=1.0.0",
]
test = []
dev = [
    {include-group = "build"},
    {include-group = "docs"},
    {include-group = "test"},
]
