[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Animator for NAViz"
edition = "2021"
keywords = ["naviz", "animation"]
license.workspace = true
name = "naviz-animator"
repository.workspace = true
version = "0.4.1"

[dependencies]
fraction = "0.15.3"
naviz-parser = {path = "../parser"}
naviz-state = {path = "../state"}
ordered-float = "4.3.0"
regex = "1.11.0"
