# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Animator for NAViz"
edition = "2021"
keywords = ["naviz", "animation"]
license = "AGPL-3.0-or-later"
name = "naviz-animator"
repository.workspace = true
version = "0.4.1"

[dependencies]
fraction = "0.15.3"
naviz-parser = {path = "../parser"}
naviz-state = {path = "../state"}
ordered-float = "4.3.0"
regex = "1.11.0"
