[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = ["visualization"]
description = "GUI for NAViz"
edition = "2021"
keywords = ["naviz", "gui"]
license = "AGPL-3.0-or-later"
name = "naviz-gui"
repository.workspace = true
version = "0.5.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
constcat = "0.5.1"
eframe = {git = "https://github.com/emilk/egui.git", rev = "f4ed394a85fdce6a141fab20002554442c8b69aa", default-features = false, features = [
  "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "wgpu", # Use the wgpu rendering backend.
  "wayland",
  "x11",
]}
egui = {git = "https://github.com/emilk/egui.git", rev = "f4ed394a85fdce6a141fab20002554442c8b69aa"}
egui_extras = {git = "https://github.com/emilk/egui.git", rev = "f4ed394a85fdce6a141fab20002554442c8b69aa"}
git-version = "0.3.9"
konst = "0.3.16"
log = "0.4"
naviz-animator = {path = "../animator"}
naviz-import = {path = "../import"}
naviz-parser = {path = "../parser"}
naviz-renderer = {path = "../renderer"}
naviz-repository = {path = "../repository"}
naviz-state = {path = "../state"}
rfd = "0.15.0"
wgpu = {version = "*", features = ["webgl"]}# Enable webgl-support in wgpu

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
futures = {version = "0.3.30", default-features = false, features = ["executor", "thread-pool"]}
naviz-video = {path = "../video"}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3.70", features = ["Screen"]}
