[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = ["visualization"]
description = "GUI for NAViz"
edition = "2021"
keywords = ["naviz", "gui"]
license = "AGPL-3.0-or-later"
name = "naviz-gui"
repository.workspace = true
version = "0.7.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
constcat = "0.6.0"
eframe = { git = "https://github.com/emilk/egui.git", rev = "49fad9a7b2b8f99f0081b105e7fd4f5851238ac5", default-features = false, features = [
  "accesskit", # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
  "default_fonts", # Embed the default egui fonts.
  "persistence", # Persist some data across starts
  "wgpu", # Use the wgpu rendering backend.
  "wayland",
  "x11",
]}
egui = { git = "https://github.com/emilk/egui.git", rev = "eb35f7d12f2a941707eee3406aab28e1df0262c9" }
egui_extras = { git = "https://github.com/emilk/egui.git", rev = "49fad9a7b2b8f99f0081b105e7fd4f5851238ac5" }
git-version = "0.3.9"
konst = "0.4.0"
log = "0.4"
naviz-animator = {workspace = true}
naviz-import = {workspace = true}
naviz-parser = {workspace = true}
naviz-renderer = {workspace = true}
naviz-repository = {workspace = true}
naviz-state = {workspace = true}
rfd = "0.17.0"
serde = {version = "1.0", features = ["derive"]}
wgpu = {version = "28", features = ["webgl"]} # Enable webgl-support in wgpu

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
futures = {version = "0.3.30", default-features = false, features = ["executor", "thread-pool"]}
naviz-video = {workspace = true}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = {version = "0.3.70", features = ["Screen"]}
