# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Importer for for converting other formats to the NAViz format"
edition = "2021"
keywords = ["naviz", "import"]
license = "LGPL-3.0-or-later"
name = "naviz-import"
repository.workspace = true
version = "0.1.1"

[dependencies]
fraction = "0.15.3"
naviz-parser = {path = "../parser"}
serde = {version = "1.0.217", optional = true, features = ["serde_derive"]}
winnow = "0.6.22"

[features]
serde = ["dep:serde"]
