[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = ["parser-implementations"]
description = "Parser for the NAViz input files"
edition = "2021"
keywords = ["naviz", "parser"]
license = "LGPL-3.0-or-later"
name = "naviz-parser"
repository.workspace = true
version = "0.4.0"

[dependencies]
fraction = "0.15.3"
itertools = "0.13.0"
regex = "1.10.6"
winnow = "0.6.18"
