[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Python-interface for naviz"
edition = "2021"
keywords = ["naviz", "python"]
license = "MIT"
name = "naviz-python"
repository.workspace = true
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "naviz"

[dependencies]
futures = "0.3.31"
naviz-animator = {path = "../animator"}
naviz-import = {path = "../import", features = ["serde"]}
naviz-parser = {path = "../parser"}
naviz-repository = {path = "../repository"}
naviz-video = {path = "../video"}
pyo3 = "0.24.2"
serde = "1.0.217"
serde-pyobject = "0.6.2"
