# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = ["visualization", "rendering"]
description = "Renderer for NAViz"
edition = "2021"
keywords = ["naviz", "renderer"]
license = "AGPL-3.0-or-later"
name = "naviz-renderer"
repository.workspace = true
version = "0.5.1"

[dependencies]
bytemuck = "1.18.0"
glam = {version = "0.29.0", features = ["bytemuck"]}
glyphon = "0.6.0"
log = "0.4.22"
naga_oil = "0.15.0"
naviz-state = {path = "../state"}
wgpu = {version = "22.1.0", default-features = false, features = ["wgsl", "naga-ir"]}

[build-dependencies]
ureq = "3.0.5"
