[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = ["visualization", "rendering"]
description = "Renderer for NAViz"
edition = "2021"
keywords = ["naviz", "renderer"]
license.workspace = true
name = "naviz-renderer"
repository.workspace = true
version = "0.5.1"

[dependencies]
bytemuck = "1.18.0"
glam = {version = "0.29.0", features = ["bytemuck"]}
glyphon = "0.8"
log = "0.4.22"
naga_oil = "0.17"
naviz-state = {workspace = true}
wgpu = {version = "24", default-features = false, features = ["wgsl", "naga-ir"]}

[build-dependencies]
ureq = "3.0.5"
