[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = ["visualization", "rendering"]
description = "Renderer for NAViz"
edition = "2021"
keywords = ["naviz", "renderer"]
license.workspace = true
name = "naviz-renderer"
repository.workspace = true
version = "0.6.0"

[dependencies]
bytemuck = "1.18.0"
glam = {version = "0.32.0", features = ["bytemuck"]}
glyphon = { git = "https://github.com/grovesNL/glyphon", rev = "5ac022456ad16ae3ddb60c4f1db1f0f63e412571" }
log = "0.4.22"
naga_oil = "0.22"
naviz-state = {workspace = true}
wgpu = {version = "29", default-features = false, features = ["wgsl", "naga-ir"]}

[build-dependencies]
ureq = "3.0.5"
