# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Repository for NAViz"
edition = "2021"
keywords = ["naviz", "repository"]
license = "AGPL-3.0-or-later"
name = "naviz-repository"
repository.workspace = true
version = "0.1.1"

[dependencies]
directories = "5.0.1"
include_dir = "0.7.4"
naviz-parser = {path = "../parser"}
