[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Repository for NAViz"
edition = "2021"
keywords = ["naviz", "repository"]
license.workspace = true
name = "naviz-repository"
repository.workspace = true
version = "0.1.1"

[dependencies]
directories = "5.0.1"
include_dir = "0.7.4"
naviz-parser = {workspace = true}
