# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "State for NAViz"
edition = "2021"
keywords = ["naviz", "state"]
license = "AGPL-3.0-or-later"
name = "naviz-state"
repository.workspace = true
version = "0.5.0"

[dependencies]
