# Copyright (c) 2023 - 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Video export for NAViz"
edition = "2021"
keywords = ["naviz", "video", "export"]
license = "AGPL-3.0-or-later"
name = "naviz-video"
repository.workspace = true
version = "0.3.1"

[dependencies]
naviz-animator = {path = "../animator"}
naviz-renderer = {path = "../renderer"}
wgpu = {version = "22.1.0", default-features = false}
