[package]
authors = ["FloezeTv <floeze@floeze.tv>"]
categories = []
description = "Video export for NAViz"
edition = "2021"
keywords = ["naviz", "video", "export"]
license.workspace = true
name = "naviz-video"
repository.workspace = true
version = "0.3.1"

[dependencies]
naviz-animator = {path = "../animator"}
naviz-renderer = {path = "../renderer"}
wgpu = {version = "24", default-features = false}
